--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,9 +18,12 @@
   "author": "Philip Deljanov",
   "license": "Proprietary",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "electron-rebuild": "^1.3.0"
   },
   "dependencies": {
-    "async": "^2.1.2"
+    "async": "^2.1.2",
+    "clone": "^2.0.0",
+    "key-path-helpers": "^0.4.0"
   }
 }
