--- a/src/client/package.json
+++ b/src/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "async": "^2.1.2",
     "clone": "^2.0.0",
-    "key-path-helpers": "^0.4.0"
+    "key-path-helpers": "^0.4.0",
+    "mime-types": "^2.1.13"
   }
 }
