--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,15 +9,17 @@
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
-    "Pipeline",
+    "Capsule Sync",
     "Capsule",
     "synchronization",
     "sync",
     "android",
+    "mobile",
+    "file",
     "files"
   ],
   "author": "Philip Deljanov",
-  "license": "Proprietary",
+  "license": "",
   "devDependencies": {
     "electron": "^1.4.1",
     "electron-rebuild": "^1.3.0"
