--- a/src/client/package.json
+++ b/src/client/package.json
@@ -25,9 +25,9 @@
     "electron-rebuild": "^1.3.0"
   },
   "dependencies": {
-    "async": "^2.1.2",
     "clone": "^2.0.0",
     "key-path-helpers": "^0.4.0",
-    "mime-types": "^2.1.13"
+    "mime-types": "^2.1.13",
+    "sqlite3": "^3.1.8"
   }
 }
