--- a/src/client/package.json
+++ b/src/client/package.json
@@ -27,7 +27,10 @@
   "dependencies": {
     "clone": "^2.0.0",
     "key-path-helpers": "^0.4.0",
-    "mime-types": "^2.1.13",
-    "sqlite3": "^3.1.8"
+    "level-delete-range": "^0.1.0",
+    "level-hooks": "^4.5.0",
+    "leveldown": "^1.5.2",
+    "levelup": "^1.3.3",
+    "mime-types": "^2.1.13"
   }
 }
