--- a/src/client/package.json
+++ b/src/client/package.json
@@ -28,9 +28,9 @@
     "clone": "^2.0.0",
     "key-path-helpers": "^0.4.0",
     "level-delete-range": "^0.1.0",
-    "level-hooks": "^4.5.0",
     "leveldown": "^1.5.2",
     "levelup": "^1.3.3",
-    "mime-types": "^2.1.13"
+    "mime-types": "^2.1.13",
+    "through2": "^2.0.3"
   }
 }
