--- a/src/client/package.json
+++ b/src/client/package.json
@@ -30,6 +30,7 @@
     "level-delete-range": "^0.1.0",
     "leveldown": "^1.5.2",
     "levelup": "^1.3.3",
+    "mdns": "^2.3.3",
     "mime-types": "^2.1.13",
     "through2": "^2.0.3"
   }
