--- a/src/client/package.json
+++ b/src/client/package.json
@@ -22,10 +22,14 @@
   "license": "",
   "devDependencies": {
     "electron": "^1.4.1",
-    "electron-rebuild": "^1.3.0"
+    "electron-rebuild": "^1.3.0",
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
     "clone": "^2.0.0",
+    "debug": "^2.6.0",
     "end-stream": "^0.1.0",
     "key-path-helpers": "^0.4.0",
     "level-delete-range": "^0.1.0",
