Add AppPaths and Dispatcher. Further linting.
The Dispatcher has been introduced as a way to coordinate sources within a Capsule.
For example, only one initial/delta scan should run at a given time. Additionally,
it may be useful to pause change notifications during those scans as well. Regardless,
the dispatcher will coordinate such issues.

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "clone": "^2.0.0",
     "debug": "^2.6.0",
+    "deep-extend": "^0.4.1",
     "end-stream": "^0.1.0",
     "key-path-helpers": "^0.4.0",
     "level-delete-range": "^0.1.0",
