--- a/src/client/package.json
+++ b/src/client/package.json
@@ -38,6 +38,7 @@
     "levelup": "^1.3.3",
     "mdns": "^2.3.3",
     "mime-types": "^2.1.13",
+    "pem": "^1.9.4",
     "through2": "^2.0.3"
   }
 }
