--- a/src/client/package.json
+++ b/src/client/package.json
@@ -37,6 +37,7 @@
     "leveldown": "^1.5.2",
     "levelup": "^1.3.3",
     "mdns": "^2.3.3",
+    "media-type": "^0.3.0",
     "mime-types": "^2.1.13",
     "pem": "^1.9.4",
     "through2": "^2.0.3"
