--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "capsule",
+  "productName": "Capsule Sync",
   "version": "1.0.0",
   "description": "A cross-device cross-platform file synchronization utility.",
   "main": "main.js",
@@ -34,6 +35,7 @@
     "debug": "^2.6.0",
     "deep-extend": "^0.4.1",
     "end-stream": "^0.1.0",
+    "express": "^4.14.1",
     "fluent-ffmpeg": "^2.1.0",
     "key-path-helpers": "^0.4.0",
     "level-delete-range": "^0.1.0",
